RESOLVED FIXED307585
[GFC] maximumSizeConstraint should handle Style::MaximumSize instead of Style::MinimumSize
https://bugs.webkit.org/show_bug.cgi?id=307585
Summary [GFC] maximumSizeConstraint should handle Style::MaximumSize instead of Style...
Yulun Wu
Reported 2026-02-11 12:30:45 PST
Attachments
Yulun Wu
Comment 1 2026-02-11 12:32:51 PST
EWS
Comment 2 2026-02-11 13:17:22 PST
Committed 307297@main (7e0f378151fd): <https://commits.webkit.org/307297@main> Reviewed commits have been landed. Closing PR #58431 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.