[GFC] maximumSizeConstraint should handle Style::MaximumSize instead of Style::MinimumSize. https://bugs.webkit.org/show_bug.cgi?id=307585 <rdar://170167033>

Reviewed by Sammy Gill.

This PR fixes a typo.

* Source/WebCore/layout/integration/grid/LayoutIntegrationGridLayout.cpp:
(WebCore::LayoutIntegration::maximumSizeConstraint):

Canonical link: https://commits.webkit.org/307297@main